--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,27 @@
       "KissDev\\Overseer\\": "src/"
     }
   },
+  "extra": {
+    "laravel": {
+      "provider": [
+        "KissDev\\Overseer\\OverseerServiceProvider"
+      ],
+      "aliases": {
+        "Overseer": "KissDev\\Overseer\\Facades\\Overseer"
+      }
+    }
+  },
   "require": {
     "php": ">=5.6.4",
-    "illuminate/database": "5.3.*",
-    "illuminate/support": "5.3.*",
-    "illuminate/filesystem": "5.3.*",
-    "illuminate/config": "5.3.*",
-    "illuminate/routing": "5.3.*"
+    "illuminate/database": "5.3.*|5.4.*|5.5.*",
+    "illuminate/support": "5.3.*|5.4.*|5.5.*",
+    "illuminate/filesystem": "5.3.*|5.4.*|5.5.*",
+    "illuminate/config": "5.3.*|5.4.*|5.5.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.4",
+    "squizlabs/php_codesniffer": "3.*",
+    "orchestra/testbench": "~3.0"
   },
   "minimum-stability": "stable"
 }
